# python-playground

3D-packing-demo/: main.py  pyproject.toml
AIAgent/: agent_demo.py  c_test_agent_LLM.py  c_test_agent_offline.py  c_test_agent_offline_flow.py  c_test_agent_simple.py  pyproject.toml
Astar-demo/: coolmain3d.py  pyproject.toml
FastAPI-demo/: pyproject.toml
air-condition-simulator/: app.py
lyrics-scraper-app/: lyrics_milet.csv  lyrics_partial.csv  main.py  main12.py  mainall.py  pyproject.toml
openCV-app/: MP4VideoConverter.spec  README.md  main.py  pyproject.toml
osm_streamlit_demo/: README.md  app.py  navi_demo.py  pyproject.toml
postgre-python-demo/: README.md  docker-compose.yml  insert_sample.py
pygame-Astar-demo/: coolmain.py  main.py
pygame-typing-game/: pyproject.toml
streamlit-air-condition-simulator/: app.py
text-maining-app/: README.md  main.py  pyproject.toml
text-maining-app/fonts/: README.txt
travel-map/: travle-map.py
typing-game/: typing.py
