[project]
name = "aiagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asteval>=1.0.6",
    "openai>=2.4.0",
    "pandas>=2.3.3",
    "pycparser>=2.23",
    "pypdf>=6.1.1",
    "requests>=2.32.5",
    "streamlit>=1.50.0",
    "wikipedia>=1.4.0",
]
