[project]
name = "astar-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "panda3d>=1.10.15",
    "pillow>=11.2.1",
    "pygame>=2.6.1",
    "streamlit>=1.45.0",
    "streamlit-drawable-canvas>=0.9.3",
]
